--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,11 +48,12 @@
     <Analyzer Include="/home/milkski/Unity/Hub/Editor/6000.0.60f1/Editor/Data/Tools/Unity.SourceGenerators/Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets/Scripts/PlayerController.cs" />
-    <Compile Include="Assets/PlayerAttack.cs" />
+    <Compile Include="Assets/Scripts/Enemy/EnemyInfo.cs" />
+    <Compile Include="Assets/globalGrid.cs" />
+    <Compile Include="Assets/Scripts/Player/PlayerController.cs" />
     <Compile Include="Assets/TutorialInfo/Scripts/Readme.cs" />
-    <Compile Include="Assets/Scripts/PlayerFollow.cs" />
-    <Compile Include="Assets/EnemyInfo.cs" />
+    <Compile Include="Assets/Scripts/Player/PlayerAttack.cs" />
+    <Compile Include="Assets/Scripts/Player/PlayerFollow.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets/TextMesh Pro/Shaders/TMPro.cginc" />
