--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,6 +48,7 @@
     <Analyzer Include="/home/milkski/Unity/Hub/Editor/6000.0.60f1/Editor/Data/Tools/Unity.SourceGenerators/Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets/EnemyPathfinding.cs" />
     <Compile Include="Assets/Scripts/Enemy/EnemyInfo.cs" />
     <Compile Include="Assets/globalGrid.cs" />
     <Compile Include="Assets/Scripts/Player/PlayerController.cs" />
